stupid fucking AI
